@@ -15,6 +15,7 @@ lib/RDF/Simple/Serializer/N3.pm
 lib/RDF/Simple/Serializer/Notation3.pm
 lib/RDF/Simple/Serializer/NT.pm
 lib/RDF/Simple/Serializer/NTriples.pm
+LICENSE
 Makefile.PL
 MANIFEST			This list of files
 META.yml
