@@ -8,7 +8,7 @@ build_requires:
   Test::Pod: 0
   Test::Pod::Coverage: 0
 distribution_type: module
-generated_by: 'Module::Install version 0.76'
+generated_by: 'Module::Install version 0.77'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -26,4 +26,4 @@ requires:
   perl: 5
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.015
+version: 1.016
