@@ -1,12 +1,11 @@
 
-# $Id: Makefile.PL,v 1.15 2008/07/30 01:24:44 Martin Exp $
+# $Id: Makefile.PL,v 1.17 2009/01/13 01:47:25 Martin Exp $
 
 use inc::Module::Install;
 
 name('RDF-Simple-Serialiser-Notation3');
 all_from('lib/RDF/Simple/Serialiser/N3.pm');
-version(1.015);
-# author('Martin Thurn <mthurn@cpan.org>');
+version(1.016);
 license('perl');
 abstract('Output RDF triples in Notation3 format');
 
